# RustRabbitMQ

./: .contBash.sh.swp  .gitignore  Cargo.toml  README.md  buildngit.sh  co.sh  contBash.sh  cp.txt  createMyRabbit.sh  create_test_dirs.sh  env.txt  lapinMeta.txt  scrubtarget.sh  ssh-keygen -t ed25519 -C "danweese@gmail.com"  ssh-keygen -t ed25519 -C "danweese@gmail.com".pub  startRabbit.sh
artifacts/: 20205-04-02_11:51.txt  2025-03-16 Future Plans.txt  2025-03-22.txt  2025-04-02.txt  2025-04-02_summary.md  Architecture-summary.md
examples/: advanced_patterns.rs  config_json.rs  consumer.rs  publisher.rs  request_response.rs  rpc_demo.rs
examples/common/: connection.rs  mod.rs
logs/: cargorun.txt
show/: README.md  presentation.md
src/: config.rs  database.rs  database.txt  db_trivial.rs  env.rs  errors.rs  fresh_data.rs  main.rs  main.txt  main_db.rs  message.rs  models.rs  rabbitmq.rs  rabbitmq_client.rs  rabbitmq_client.txt  test_runner.rs  zero_copy_deser.rs
src/common/: advanced_patterns.rs  amqp_client.rs  batch_processor.rs  channel_manager.rs  connection.rs  consumer.rs  errors.rs  mod.rs  publisher.rs  request_response.rs  tokio_exec.rs  type_safe_mr.rs
src/messaging/: error.rs  mod.rs  types.rs
src/models/: message_types.rs  mod.rs
src/processing/: batch.rs  mod.rs
src/rabbitmq/: amqp_client.rs  batch_processor.rs  channel_manager.rs  connection.rs  errors.rs  mod.rs  publisher.rs  request_response.rs  type_safe_mr.rs
src/utils/: mod.rs  zero_copy_deser.rs
tests/: README.md
tests/fixtures/rabbitmq/configs/: test_config.json
tests/fixtures/rabbitmq/messages/: sample_message.json
tests/integration/: connection_test.rs
tests/resources/: docker-compose.yml
