[package]
name = "RustRabbitMQ"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "RustRabbitMQ"
path = "src/main.rs"

[dependencies]

lapin = { version = "2.5.1" }

tokio-rustls = "0.26.2"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros", "time", "signal", "sync"] }
amq-protocol-types = "8.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-lite = "2.6.0"
tracing = "0.1.41"
anyhow = "1.0.97"
dotenv = "0.15.0"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
async-std = "1.13.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
home = "0.5.11"
log = "0.4.26"
which = "7.0.2"
want = "0.3.1"
futures = "0.3.31"
env_logger = "0.11.7"
rand = "0.9.0"
async-trait = "0.1.87"
